Fixed small formatting issue only seen on mobile devices.

--- a/backend/server/frontend/public/styles/main.css
+++ b/backend/server/frontend/public/styles/main.css
@@ -2131,10 +2131,10 @@ a {
 
 .container {
     position: relative;
-    padding-left: 35px;
+    padding-left: 30px;
     margin-bottom: 12px;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 20px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
